--- a/#src/index.html
+++ b/#src/index.html
@@ -21,7 +21,7 @@
 
 <div class="card">
   <div class="card__image">
-    <img class="card__item" src="/images/card-1.png" alt="img: card-1">
+    <img class="card__item" src="images/card-1.png" alt="img: card-1">
   </div>
   
   <section class="card__section">
@@ -35,7 +35,7 @@
 
 <div class="card-2">
   <div class="card__image">
-    <img class="card__item" src="/images/card-2.png" alt="img: card-2">
+    <img class="card__item" src="images/card-2.png" alt="img: card-2">
   </div>
   <section class="card__section">
     <h3 class="card__title">Как заработать на дизайне?</h3>
@@ -49,7 +49,7 @@
 
   <div class="slider">
     <div class="slider__item">
-      <img class="slider__image" src="/images/slide-1.jpg" alt="img: slide-1">
+      <img class="slider__image" src="images/slide-1.jpg" alt="img: slide-1">
       <h2 class="slider__title">Станислав Орехов</h2>
       <p class="slider__text">Дизайнер, визуализатор, <br>
         руководитель студии <br>
@@ -57,28 +57,28 @@
     </div>
   
     <div class="slider__item">
-      <img class="slider__image" src="/images/slide-2.jpg" alt="img: slide-2">
+      <img class="slider__image" src="images/slide-2.jpg" alt="img: slide-2">
       <h2 class="slider__title">Светлана Котлукова</h2>
       <p class="slider__text">Маркетолог, руководитель PR-агентства <br>
         для дизайнеров «АрхДиалог»</p>
     </div>
   
     <div class="slider__item">
-      <img class="slider__image" src="/images/slide-3.jpg" alt="img: slide-3">
+      <img class="slider__image" src="images/slide-3.jpg" alt="img: slide-3">
       <h2 class="slider__title">Максим Вересов</h2>
       <p class="slider__text">Архитектор, строитель, руководитель компании <br>
         деревянного строительства</p>
     </div>
   
     <div class="slider__item">
-      <img class="slider__image" src="/images/slide-4.jpg" alt="img: slide-4">
+      <img class="slider__image" src="images/slide-4.jpg" alt="img: slide-4">
       <h2 class="slider__title">Максим Вересов</h2>
       <p class="slider__text">Архитектор, строитель, руководитель компании <br>
         деревянного строительства</p>
     </div>
   
     <div class="slider__item">
-      <img class="slider__image" src="/images/slide-5.jpg" alt="img: slide-5">
+      <img class="slider__image" src="images/slide-5.jpg" alt="img: slide-5">
       <h2 class="slider__title">Максим Вересов</h2>
       <p class="slider__text">Архитектор, строитель, руководитель компании <br>
         деревянного строительства</p>
@@ -127,13 +127,13 @@
   </div>
   <div class="slider">
     <div class="slider__item">
-      <img class="slider__image" src="/images/gallery-1.jpg" alt="">
+      <img class="slider__image" src="images/gallery-1.jpg" alt="">
     </div>
     <div class="slider__item">
-      <img class="slider__image" src="/images/gallery-2.jpg" alt="">
+      <img class="slider__image" src="images/gallery-2.jpg" alt="">
     </div>
     <div class="slider__item">
-      <img class="slider__image" src="/images/gallery-3.jpg" alt="">
+      <img class="slider__image" src="images/gallery-3.jpg" alt="">
     </div>
   </div>
 </div>
@@ -173,7 +173,7 @@
       </form>
     </section>
     <section class="form__section">
-      <img class="form__image" src="/images/Group 11.jpg" alt="">
+      <img class="form__image" src="images/Group 11.jpg" alt="">
       <div class="form__recktangle"></div>
     </section>
   </div>
@@ -182,28 +182,28 @@
 <footer class="footer">
         <div class="footer__social-link">
           <a href="#" class="footer__item">
-            <img src="/images/twitter.svg" alt="twitter">
+            <img src="images/twitter.svg" alt="twitter">
           </a>
           <div class="footer__point"></div>
           <a href="#" class="footer__item">
-            <img src="/images/linkin.svg" alt="linkin">
+            <img src="images/linkin.svg" alt="linkin">
           </a>
           <div class="footer__point"></div>
           <a href="#" class="footer__item">
-            <img src="/images/facebook.svg" alt="Facebook">
+            <img src="images/facebook.svg" alt="Facebook">
           </a>
           <div class="footer__point"></div>
           <a href="#" class="footer__item">
-            <img src="/images/youtube.svg" alt="YouTube">
+            <img src="images/youtube.svg" alt="YouTube">
           </a>
           <div class="footer__point"></div>
           <a href="#" class="footer__item">
-            <img src="/images/Inst.svg" alt="Instagram">
+            <img src="images/Inst.svg" alt="Instagram">
           </a>
         </div>
     <div class="footer__doc">
         <a href="/" class="footer__link">
-          <img width="157" src="/images/logo.svg" alt="logo: Design" class="footer__logo">
+          <img width="157" src="images/logo.svg" alt="logo: Design" class="footer__logo">
         </a>
         <nav>
         <ul class="footer__navigation">
